8201516: DebugNonSafepoints generates incorrect information

Reviewed-by: thartmann, shade
Backport-of: 94eda53d98e5011cc613d031ff8941e254eb666b